[package]
name = "grpc_server01"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
bytes = "1.2"
prost = "0.11"
prost-derive = "0.11"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.8"
